--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,265 +6,397 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: vmess
+    server: 4a2u0a05.mcfront.xyz
+    port: 31506
+    cipher: auto
+    uuid: bb0e0296-ba40-4dcf-b637-42115df99463
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: us05.lovemc.xyz
+    network: tcp
+  - &id002
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: 192.74.228.179
-    port: 42857
+    server: 104.17.32.102
+    port: 8080
     cipher: auto
-    uuid: 051b844f-efe3-4847-92aa-66b5de0b6d4e
-    alterId: 64
+    uuid: c5c9844d-050e-44f1-cb6d-ec5166772631
+    alterId: 0
     tls: false
     skip-cert-verify: true
-  - &id002
-    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
-    type: ssr
-    server: en2.vfun.icu
-    port: 443
-    password: vyunme
-    cipher: aes-256-cfb
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: ab93117422.jd.hk
-    protocol-param: 17422:TTp0SX
+    network: ws
+    ws-opts:
+      path: /qwer00
+      headers:
+        host: x2.ylks01.eu.org
   - &id003
-    name: 🇫🇷_FR_法国
-    type: ssr
-    server: 94.23.116.190
-    port: 443
-    password: HowdyBypasser2022
-    cipher: aes-256-ctr
-    obfs: tls1.2_ticket_auth
-    protocol: origin
-  - &id004
-    name: 🇺🇸_US_美国_2
+    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_1
     type: vmess
-    server: 107.167.16.101
-    port: 47074
+    server: 6w7j3p05.mcfront.xyz
+    port: 31106
     cipher: auto
-    uuid: b74f4afa-1a57-4aff-b7e5-8ad5ea33566f
-    alterId: 64
-    tls: false
+    uuid: bb0e0296-ba40-4dcf-b637-42115df99463
+    alterId: 0
+    tls: true
     skip-cert-verify: true
+    servername: jp05.lovemc.xyz
+    network: tcp
+  - &id004
+    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
+    type: vmess
+    server: 4w7u4a04.mcfront.xyz
+    port: 31871
+    cipher: auto
+    uuid: bb0e0296-ba40-4dcf-b637-42115df99463
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: ua04.lovemc.xyz
     network: tcp
   - &id005
-    name: 🇰🇷_KR_韩国
-    type: trojan
-    server: kr.cc2.zhoushuren.top
-    port: 58853
-    udp: true
-    password: 431218b0-8b07-4d71-89a4-c20aa92fce30
-    sni: kr.cc2.zhoushuren.top
+    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾_1
+    type: vmess
+    server: 2d1t5w05.mcfront.xyz
+    port: 31306
+    cipher: auto
+    uuid: bb0e0296-ba40-4dcf-b637-42115df99463
+    alterId: 0
+    tls: true
     skip-cert-verify: true
+    servername: tw05.lovemc.xyz
     network: tcp
   - &id006
-    name: 🇹🇼_TW_台湾_1
-    type: ss
-    server: 103.177.33.180
-    port: 443
-    password: 9e44e9ffe5c2
-    cipher: chacha20-ietf-poly1305
-    plugin: v2ray-plugin
-    plugin-opts:
-      mode: websocket
-      host: wtw1000mline004.chilines.club
-      path: /isaifqaagpi
-      mux: true
-  - &id007
-    name: 🇹🇼_TW_台湾_2
+    name: 🇨🇳_CN_中国->🇻🇳_VN_越南_1
     type: vmess
-    server: tw99-hinet.mynodes001.one
-    port: 445
+    server: 2w8u2a04.mcfront.xyz
+    port: 31874
     cipher: auto
-    uuid: 5f04de84-6b7e-3564-82c2-d2a998002629
+    uuid: bb0e0296-ba40-4dcf-b637-42115df99463
     alterId: 0
-    tls: false
+    tls: true
     skip-cert-verify: true
+    servername: vn04.lovemc.xyz
+    network: tcp
+  - &id007
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_1
+    type: vmess
+    server: 1c7s2g04.mcfront.xyz
+    port: 31201
+    cipher: auto
+    uuid: bb0e0296-ba40-4dcf-b637-42115df99463
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: sg04.lovemc.xyz
+    network: tcp
   - &id008
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: ss
-    server: 46.17.43.192
-    port: 12345
-    password: dongtaiwang.com
-    cipher: aes-256-gcm
+    name: 🇨🇳_CN_中国->🇭🇺_HU_匈牙利
+    type: vmess
+    server: 3c2h4u04.mcfront.xyz
+    port: 31864
+    cipher: auto
+    uuid: bb0e0296-ba40-4dcf-b637-42115df99463
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: hu04.lovemc.xyz
+    network: tcp
   - &id009
-    name: 🇺🇸_US_美国_3
+    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚_1
     type: vmess
-    server: 69.25.115.162
-    port: 443
+    server: 4o5a3u04.mcfront.xyz
+    port: 31821
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
+    uuid: bb0e0296-ba40-4dcf-b637-42115df99463
+    alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: www.69908657.xyz
-    network: ws
-    ws-opts:
-      path: /path/1685877796747
+    servername: au04.lovemc.xyz
+    network: tcp
   - &id010
-    name: 🇺🇸_US_美国_4
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_2
     type: vmess
-    server: 137.175.52.26
-    port: 443
+    server: 1c7s2g05.mcfront.xyz
+    port: 31206
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
+    uuid: bb0e0296-ba40-4dcf-b637-42115df99463
+    alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: www.77646750.xyz
-    network: ws
-    ws-opts:
-      path: /path/1685935087393
+    servername: sg05.lovemc.xyz
+    network: tcp
   - &id011
-    name: 🇺🇸_US_美国_5
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_1
     type: vmess
-    server: 23.225.33.173
-    port: 443
+    server: 5m4h0k05.mcfront.xyz
+    port: 31606
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
+    uuid: bb0e0296-ba40-4dcf-b637-42115df99463
+    alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: www.53638055.xyz
-    network: ws
-    ws-opts:
-      path: /path/1685950726372
+    servername: hk05.lovemc.xyz
+    network: tcp
   - &id012
-    name: 🇺🇸_US_美国_6
+    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚_2
     type: vmess
-    server: 23.225.33.171
-    port: 56662
+    server: 2d1t5w06.mcfront.xyz
+    port: 31311
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
+    uuid: bb0e0296-ba40-4dcf-b637-42115df99463
+    alterId: 0
+    tls: true
     skip-cert-verify: true
+    servername: tw06.lovemc.xyz
     network: tcp
   - &id013
-    name: 🇸🇬_SG_新加坡_1
-    type: ssr
-    server: sg-am3.eqsunshine.com
-    port: 32001
-    password: 3g0dHlKME
-    cipher: aes-256-cfb
-    obfs: tls1.2_ticket_auth
-    protocol: origin
+    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾_2
+    type: vmess
+    server: 8t6w05.abzoones.xyz
+    port: 36306
+    cipher: auto
+    uuid: 7289efbd-3bed-4a7c-98b0-536021167c4e
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: tw05.abpilot.xyz
+    network: tcp
   - &id014
-    name: 🇯🇵_JP_日本
-    type: ssr
-    server: jp-am48-6.eqnode.net
-    port: 8081
-    password: eAokbaDN6
-    cipher: aes-256-cfb
-    obfs: tls1.2_ticket_auth
-    protocol: origin
+    name: 🇨🇳_CN_中国->🇷🇺_RU_俄罗斯联邦
+    type: vmess
+    server: 4t1r5u04.mcfront.xyz
+    port: 31851
+    cipher: auto
+    uuid: bb0e0296-ba40-4dcf-b637-42115df99463
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: ru04.lovemc.xyz
+    network: tcp
   - &id015
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
+    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_2
     type: vmess
-    server: 104.25.243.70
-    port: 80
+    server: 6w7j3p04.mcfront.xyz
+    port: 31116
     cipher: auto
-    uuid: 6884d728-7fb0-4172-c319-e8caeadcd01f
+    uuid: bb0e0296-ba40-4dcf-b637-42115df99463
     alterId: 0
-    tls: false
+    tls: true
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /tg@herhero6
-      headers:
-        host: us.herofree66.tk
+    servername: jp04.lovemc.xyz
+    network: tcp
   - &id016
-    name: 🇩🇪_DE_德国->🇭🇰_HK_香港
+    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾_3
     type: vmess
-    server: hkgkgb.76898102.xyz
-    port: 2082
+    server: 2d1t5w04.mcfront.xyz
+    port: 31301
     cipher: auto
-    uuid: 285bfc27-2341-3c7a-be0e-360cedd5e209
+    uuid: bb0e0296-ba40-4dcf-b637-42115df99463
     alterId: 0
-    tls: false
+    tls: true
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /funsdfrh
-      headers:
-        host: hkg.76898102.xyz
+    servername: tw04.lovemc.xyz
+    network: tcp
   - &id017
-    name: 🇺🇸_US_美国_7
+    name: 🇨🇳_CN_中国->🇹🇷_TR_土耳其_1
     type: vmess
-    server: 104.21.53.35
-    port: 80
+    server: 4t1u6r04.mcfront.xyz
+    port: 31868
     cipher: auto
-    uuid: 09c1d32d-4458-4ebf-b36d-4dd732bae3aa
+    uuid: bb0e0296-ba40-4dcf-b637-42115df99463
     alterId: 0
-    tls: false
+    tls: true
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /yxzbp
-      headers:
-        host: dp3.yxjnode.com
+    servername: tr04.lovemc.xyz
+    network: tcp
   - &id018
-    name: 🇮🇩_ID_印度尼西亚
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度_1
     type: vmess
-    server: id-rysa-put-ra18n19xz.live
-    port: 80
+    server: 6q3i1n04.mcfront.xyz
+    port: 31831
     cipher: auto
-    uuid: 11255dd6-c36e-4bf9-ad5e-dfb228b09298
+    uuid: bb0e0296-ba40-4dcf-b637-42115df99463
     alterId: 0
-    tls: false
+    tls: true
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: id-rysa-put-ra18n19xz.live
+    servername: in04.lovemc.xyz
+    network: tcp
   - &id019
-    name: 🇮🇱_IL_以色列->🇬🇧_GB_英国
-    type: trojan
-    server: uk1.chuqiangtou.net
-    port: 4003
-    udp: true
-    password: TJCfE7Mx2YcA8kX8zg
+    name: 🇨🇳_CN_中国->🇰🇷_KR_韩国
+    type: vmess
+    server: 8l2k1r04.mcfront.xyz
+    port: 31401
+    cipher: auto
+    uuid: bb0e0296-ba40-4dcf-b637-42115df99463
+    alterId: 0
+    tls: true
     skip-cert-verify: true
+    servername: kr04.lovemc.xyz
     network: tcp
   - &id020
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港
-    type: trojan
-    server: assets.flareai.site
-    port: 13543
-    udp: true
-    password: d0d24d5b-54ae-40a0-ab68-889dbd4b8a66
+    name: 🇸🇬_SG_新加坡
+    type: vmess
+    server: 43.156.131.164
+    port: 43860
+    cipher: auto
+    uuid: be3fdec2-86e1-4d51-969b-704b1efc3158
+    alterId: 64
+    tls: true
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /sg2/getData
   - &id021
-    name: 🇮🇱_IL_以色列->🇯🇵_JP_日本
+    name: 🇨🇳_CN_中国->🇹🇷_TR_土耳其_2
     type: trojan
-    server: jp3.chuqiangtou.net
-    port: 4003
+    server: gzdx.jcnode.top
+    port: 29500
     udp: true
-    password: TJCfE7Mx2YcA8kX8zg
+    password: 7362ca76-171d-4ebe-8b9e-e83df22417a8
+    sni: tur01.ckcloud.info
     skip-cert-verify: true
     network: tcp
   - &id022
-    name: 🇸🇬_SG_新加坡_2
-    type: ss
-    server: 103.172.116.79
-    port: 9044
-    password: KBGjZYcy4SyRShmA
-    cipher: aes-256-cfb
+    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
+    type: trojan
+    server: gzyd.jcnode.top
+    port: 27000
+    udp: true
+    password: 7362ca76-171d-4ebe-8b9e-e83df22417a8
+    sni: de01.ckcloud.info
+    skip-cert-verify: true
+    network: tcp
   - &id023
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_2
+    type: trojan
+    server: gzyd.jcnode.top
+    port: 26000
+    udp: true
+    password: 7362ca76-171d-4ebe-8b9e-e83df22417a8
+    sni: uk01.ckcloud.info
+    skip-cert-verify: true
+    network: tcp
+  - &id024
+    name: 🇨🇳_CN_中国->🇻🇳_VN_越南_2
+    type: trojan
+    server: gzyd.jcnode.top
+    port: 29200
+    udp: true
+    password: 7362ca76-171d-4ebe-8b9e-e83df22417a8
+    sni: vn01.ckcloud.info
+    skip-cert-verify: true
+    network: tcp
+  - &id025
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: trojan
+    server: gzdx.jcnode.top
+    port: 48003
+    udp: true
+    password: f119f2f3-a33f-4200-96fc-74ca49721bc4
+    sni: us04.ckcloud.info
+    skip-cert-verify: true
+    network: tcp
+  - &id026
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_3
+    type: trojan
+    server: gzdx.jcnode.top
+    port: 40002
+    udp: true
+    password: f119f2f3-a33f-4200-96fc-74ca49721bc4
+    sni: hk03.ckcloud.info
+    skip-cert-verify: true
+    network: tcp
+  - &id027
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度_2
+    type: trojan
+    server: gzdx.jcnode.top
+    port: 49000
+    udp: true
+    password: f119f2f3-a33f-4200-96fc-74ca49721bc4
+    sni: id01.ckcloud.info
+    skip-cert-verify: true
+    network: tcp
+  - &id028
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_4
+    type: vmess
+    server: gzdx.jcnode.top
+    port: 20000
+    cipher: auto
+    uuid: 7362ca76-171d-4ebe-8b9e-e83df22417a8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+  - &id029
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: bb.hk1997.pro
+    port: 1000
+    cipher: auto
+    uuid: 0fa2f4ff-d1c3-47b2-8b05-8b7e4916c290
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /jash-weh-peft-pseb-lous-jass
+      headers:
+        host: bb.hk1997.pro
+  - &id030
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_5
+    type: trojan
+    server: gzdx.jcnode.top
+    port: 20003
+    udp: true
+    password: 7362ca76-171d-4ebe-8b9e-e83df22417a8
+    sni: hk02.ckcloud.info
+    skip-cert-verify: true
+    network: tcp
+  - &id031
+    name: 🇨🇳_CN_中国->🇱🇺_LU_卢森堡
+    type: trojan
+    server: gzdx.jcnode.top
+    port: 40004
+    udp: true
+    password: f119f2f3-a33f-4200-96fc-74ca49721bc4
+    sni: hk05.ckcloud.info
+    skip-cert-verify: true
+    network: tcp
+  - &id032
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_6
+    type: trojan
+    server: gzdx.jcnode.top
+    port: 40000
+    udp: true
+    password: f119f2f3-a33f-4200-96fc-74ca49721bc4
+    sni: hk05.ckcloud.info
+    skip-cert-verify: true
+    network: tcp
+  - &id033
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 104.17.94.14
+    port: 2052
+    cipher: auto
+    uuid: 3f100fa9-a160-4a1c-c40d-e22070ac9785
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer00
+      headers:
+        host: x2.ylks01.eu.org
+  - &id034
     name: 🇨🇳_CN_中国
     type: ss
-    server: 36.139.166.252
+    server: 36.138.193.128
     port: 11023
     password: ll668668@
     cipher: aes-256-gcm
-  - &id024
-    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾
-    type: ss
-    server: 14.29.124.168
-    port: 24002
-    password: QazEdcTgb159@$*
-    cipher: aes-128-cfb
 proxy-groups:
   - name: PROXY
     type: select
@@ -315,6 +447,16 @@ proxy-groups:
       - *id022
       - *id023
       - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -344,6 +486,16 @@ proxy-groups:
       - *id022
       - *id023
       - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
   - name: SELECT
     type: select
     proxies:
@@ -371,6 +523,16 @@ proxy-groups:
       - *id022
       - *id023
       - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
