--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,356 +6,259 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇳_CN_中国->🇦🇷_AR_阿根廷
-    type: vmess
-    server: 9a8r04.abzoones.xyz
-    port: 36861
-    cipher: auto
-    uuid: 300a3e9f-1558-4601-a6e7-1340cbdde15a
-    alterId: 0
-    tls: true
+    name: 🇯🇵_JP_日本
+    type: trojan
+    server: azjp1.downloadvip.cfd
+    port: 443
+    udp: true
+    password: fddd2348-b67b-49aa-aaca-085d32f3f6fb
+    sni: jp1.xn--mes358acgm99l.com
     skip-cert-verify: true
-    servername: ar04.abpilot.xyz
     network: tcp
   - &id002
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: 140.99.148.53
-    port: 47839
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
+    name: 🇩🇪_DE_德国
+    type: trojan
+    server: 217.79.181.82
+    port: 443
+    udp: true
+    password: fddd2348-b67b-49aa-aaca-085d32f3f6fb
+    sni: download.xn--mes358acgm99l.com
     skip-cert-verify: true
     network: tcp
   - &id003
-    name: 🇨🇳_CN_中国->🇧🇷_BR_巴西
+    name: 🇺🇸_US_美国_1
     type: vmess
-    server: 6i2r04.abzoones.xyz
-    port: 36877
-    cipher: auto
-    uuid: 300a3e9f-1558-4601-a6e7-1340cbdde15a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: br04.abpilot.xyz
-    network: tcp
-  - &id004
-    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大
-    type: vmess
-    server: 5c1a04.abzoones.xyz
-    port: 36701
-    cipher: auto
-    uuid: 300a3e9f-1558-4601-a6e7-1340cbdde15a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: ca04.abpilot.xyz
-    network: tcp
-  - &id005
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: vmess
-    server: 3u1s05.abzoones.xyz
-    port: 36506
-    cipher: auto
-    uuid: 300a3e9f-1558-4601-a6e7-1340cbdde15a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: us05.abpilot.xyz
-    network: tcp
-  - &id006
-    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾_1
-    type: vmess
-    server: 8t6w05.abzoones.xyz
-    port: 36306
-    cipher: auto
-    uuid: 300a3e9f-1558-4601-a6e7-1340cbdde15a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: tw05.abpilot.xyz
-    network: tcp
-  - &id007
-    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚
-    type: vmess
-    server: 8t6w06.abzoones.xyz
-    port: 36311
-    cipher: auto
-    uuid: 300a3e9f-1558-4601-a6e7-1340cbdde15a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: tw06.abpilot.xyz
-    network: tcp
-  - &id008
-    name: 🇨🇳_CN_中国->🇰🇷_KR_韩国
-    type: vmess
-    server: 8k2r04.abzoones.xyz
-    port: 36401
-    cipher: auto
-    uuid: 300a3e9f-1558-4601-a6e7-1340cbdde15a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: kr04.abpilot.xyz
-    network: tcp
-  - &id009
-    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾_2
-    type: vmess
-    server: 8t6w04.abzoones.xyz
-    port: 36301
-    cipher: auto
-    uuid: 300a3e9f-1558-4601-a6e7-1340cbdde15a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: tw04.abpilot.xyz
-    network: tcp
-  - &id010
-    name: 🇨🇳_CN_中国->🇭🇺_HU_匈牙利
-    type: vmess
-    server: 2h4u04.abzoones.xyz
-    port: 36864
-    cipher: auto
-    uuid: 300a3e9f-1558-4601-a6e7-1340cbdde15a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: hu04.abpilot.xyz
-    network: tcp
-  - &id011
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_1
-    type: vmess
-    server: 1j8p06.abzoones.xyz
-    port: 36111
-    cipher: auto
-    uuid: 300a3e9f-1558-4601-a6e7-1340cbdde15a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: jp06.abpilot.xyz
-    network: tcp
-  - &id012
-    name: 🇨🇳_CN_中国->🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: 8r5u04.abzoones.xyz
-    port: 36851
-    cipher: auto
-    uuid: 300a3e9f-1558-4601-a6e7-1340cbdde15a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: ru04.abpilot.xyz
-    network: tcp
-  - &id013
-    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
-    type: vmess
-    server: 3d6e04.abzoones.xyz
-    port: 36841
-    cipher: auto
-    uuid: 300a3e9f-1558-4601-a6e7-1340cbdde15a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: de04.abpilot.xyz
-    network: tcp
-  - &id014
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 107.148.192.152
-    port: 49924
+    server: 140.99.57.19
+    port: 41212
     cipher: auto
     uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
     alterId: 64
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id015
+  - &id004
+    name: 🇸🇬_SG_新加坡
+    type: trojan
+    server: sg2.downloadvip.cfd
+    port: 443
+    udp: true
+    password: fddd2348-b67b-49aa-aaca-085d32f3f6fb
+    sni: jssg1.xn--mes358acgm99l.com
+    skip-cert-verify: true
+    network: tcp
+  - &id005
     name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡
     type: vmess
-    server: 9s5g05.abzoones.xyz
-    port: 36206
+    server: 9s5g06.abzoones.xyz
+    port: 36211
     cipher: auto
-    uuid: 300a3e9f-1558-4601-a6e7-1340cbdde15a
+    uuid: c458d5ba-b5dd-46df-ac3b-e986c2e6573c
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: sg05.abpilot.xyz
+    servername: sg06.abpilot.xyz
     network: tcp
-  - &id016
-    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
+  - &id006
+    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_1
     type: vmess
-    server: 8u9a04.abzoones.xyz
-    port: 36871
+    server: 1j8p04.abzoones.xyz
+    port: 36116
     cipher: auto
-    uuid: 300a3e9f-1558-4601-a6e7-1340cbdde15a
+    uuid: c458d5ba-b5dd-46df-ac3b-e986c2e6573c
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: ua04.abpilot.xyz
+    servername: jp04.abpilot.xyz
     network: tcp
-  - &id017
-    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
+  - &id007
+    name: 🇨🇳_CN_中国->🇵🇭_PH_菲律宾
     type: vmess
-    server: 7i4n04.abzoones.xyz
-    port: 36831
+    server: 7p3h04.abzoones.xyz
+    port: 36801
     cipher: auto
-    uuid: 300a3e9f-1558-4601-a6e7-1340cbdde15a
+    uuid: c458d5ba-b5dd-46df-ac3b-e986c2e6573c
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: in04.abpilot.xyz
+    servername: ph04.abpilot.xyz
     network: tcp
-  - &id018
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_1
+  - &id008
+    name: 🇨🇳_CN_中国->🇻🇳_VN_越南_1
     type: vmess
-    server: 8h2k05.abzoones.xyz
-    port: 36606
+    server: 3v4n04.abzoones.xyz
+    port: 36874
     cipher: auto
-    uuid: 300a3e9f-1558-4601-a6e7-1340cbdde15a
+    uuid: c458d5ba-b5dd-46df-ac3b-e986c2e6573c
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: hk05.abpilot.xyz
+    servername: vn04.abpilot.xyz
     network: tcp
-  - &id019
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_2
+  - &id009
+    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_2
     type: vmess
-    server: 8h2k04.abzoones.xyz
-    port: 36601
+    server: 1j8p05.abzoones.xyz
+    port: 36106
     cipher: auto
-    uuid: 300a3e9f-1558-4601-a6e7-1340cbdde15a
+    uuid: c458d5ba-b5dd-46df-ac3b-e986c2e6573c
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: hk04.abpilot.xyz
+    servername: jp05.abpilot.xyz
     network: tcp
-  - &id020
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+  - &id010
+    name: 🇺🇸_US_美国_2
     type: vmess
-    server: 202.108.15.135
-    port: 443
-    cipher: aes-128-gcm
-    uuid: dddd0b29-1576-4003-9990-d7cea34264db
+    server: 104.24.169.82
+    port: 2083
+    cipher: auto
+    uuid: e883ff76-3bb4-4008-c068-6b5b1d960ea7
     alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /835757
+      path: /youlingkaishi
       headers:
-        host: dedi2.1808.cf
-  - &id021
-    name: 🇨🇳_CN_中国->🇹🇷_TR_土耳其
+        host: uyaa.vtcss.top
+  - &id011
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
     type: vmess
-    server: 2t1u04.abzoones.xyz
-    port: 36868
+    server: 104.31.16.28
+    port: 80
     cipher: auto
-    uuid: 300a3e9f-1558-4601-a6e7-1340cbdde15a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: tr04.abpilot.xyz
-    network: tcp
-  - &id022
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: vmess
-    server: 3u1s06.abzoones.xyz
-    port: 36511
-    cipher: auto
-    uuid: 300a3e9f-1558-4601-a6e7-1340cbdde15a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: us06.abpilot.xyz
-    network: tcp
-  - &id023
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
-    type: vmess
-    server: 3u1s04.abzoones.xyz
-    port: 36501
-    cipher: auto
-    uuid: 300a3e9f-1558-4601-a6e7-1340cbdde15a
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: us04.abpilot.xyz
-    network: tcp
-  - &id024
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: v2ray.online
-    port: 443
-    cipher: auto
-    uuid: 00BBF5B8-173E-6818-9927-5AD1AA073C7D
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /speedtest
-      headers:
-        host: Kansas.v2ray.online
-  - &id025
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
-    type: vmess
-    server: 23.227.38.99
-    port: 443
-    cipher: auto
-    uuid: 86d37526-5758-4cec-862f-df404b313086
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /3G6WPDL7
-      headers:
-        host: 1.freek1.xyz
-  - &id026
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 162.159.152.95
-    port: 443
-    cipher: auto
-    uuid: dddd0b29-1576-4003-9990-d7cea34264db
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /835757
-      headers:
-        host: dedi2.1808.cf
-  - &id027
-    name: 🇧🇿_BZ_伯利兹->🇺🇦_UA_乌克兰
-    type: vmess
-    server: kradvcgfb.76898102.xyz
-    port: 2052
-    cipher: auto
-    uuid: 78fd41e5-346a-3bf4-b942-be0fad711979
+    uuid: 58fe1542-5290-40ad-815a-77707a81afe5
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /bcdsuiyv
+      path: /IOebhLMhl1CTbFHbL95myfRX2
       headers:
-        host: kradvcgfb.76898102.xyz
-  - &id028
-    name: 🇺🇸_US_美国_5
+        host: ca4.tehme2.fun
+  - &id012
+    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚
+    type: vmess
+    server: 5a4u04.abzoones.xyz
+    port: 36821
+    cipher: auto
+    uuid: c458d5ba-b5dd-46df-ac3b-e986c2e6573c
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: au04.abpilot.xyz
+    network: tcp
+  - &id013
+    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
+    type: vmess
+    server: 2u3k04.abzoones.xyz
+    port: 36811
+    cipher: auto
+    uuid: c458d5ba-b5dd-46df-ac3b-e986c2e6573c
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: uk04.abpilot.xyz
+    network: tcp
+  - &id014
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: cf-lt.sharecentre.online
+    port: 8080
+    cipher: auto
+    uuid: d16c31a2-93a3-4f1a-954c-e383b14a4d26
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v02.ssrsub.com
+  - &id015
+    name: 🇹🇼_TW_台湾
     type: trojan
-    server: 148.59.74.52
+    server: ip1158944211.mobgslb.tbcache.com
     port: 443
     udp: true
-    password: 41bec492-cd79-4b57-9a15-7d2bb00fcfca
-    sni: 18-140-66-207.nhost.00cdn.com
+    password: 1381fa76-e460-3a03-a01b-b9ad00e01415
+    sni: ip1158944211.mobgslb.tbcache.com
     skip-cert-verify: true
     network: tcp
-  - &id029
-    name: 🇦🇺_AU_澳大利亚->🇩🇪_DE_德国
+  - &id016
+    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
+    type: trojan
+    server: gzdx.jcnode.top
+    port: 27000
+    udp: true
+    password: eee19429-f15e-40b8-9d2e-b15c09c9722c
+    sni: de01.ckcloud.info
+    skip-cert-verify: true
+    network: tcp
+  - &id017
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_1
+    type: trojan
+    server: gzdx.jcnode.top
+    port: 20003
+    udp: true
+    password: eee19429-f15e-40b8-9d2e-b15c09c9722c
+    sni: hk02.ckcloud.info
+    skip-cert-verify: true
+    network: tcp
+  - &id018
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
+    type: trojan
+    server: gzyd.jcnode.top
+    port: 25001
+    udp: true
+    password: eee19429-f15e-40b8-9d2e-b15c09c9722c
+    sni: id01.ckcloud.info
+    skip-cert-verify: true
+    network: tcp
+  - &id019
+    name: 🇨🇳_CN_中国->🇻🇳_VN_越南_2
+    type: trojan
+    server: gzyd.jcnode.top
+    port: 29200
+    udp: true
+    password: eee19429-f15e-40b8-9d2e-b15c09c9722c
+    sni: vn01.ckcloud.info
+    skip-cert-verify: true
+    network: tcp
+  - &id020
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_2
+    type: trojan
+    server: gzyd.jcnode.top
+    port: 20002
+    udp: true
+    password: eee19429-f15e-40b8-9d2e-b15c09c9722c
+    sni: hk01.ckcloud.info
+    skip-cert-verify: true
+    network: tcp
+  - &id021
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_3
+    type: trojan
+    server: gzyd.jcnode.top
+    port: 26000
+    udp: true
+    password: eee19429-f15e-40b8-9d2e-b15c09c9722c
+    sni: uk01.ckcloud.info
+    skip-cert-verify: true
+    network: tcp
+  - &id022
+    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_3
+    type: trojan
+    server: gzyd.jcnode.top
+    port: 21001
+    udp: true
+    password: eee19429-f15e-40b8-9d2e-b15c09c9722c
+    sni: jp02.ckcloud.info
+    skip-cert-verify: true
+    network: tcp
+  - &id023
+    name: 🇨🇾_CY_塞浦路斯->🇮🇳_IN_印度
     type: vmess
-    server: dearma.76898102.xyz
+    server: menmaza.76898102.xyz
     port: 2052
     cipher: auto
     uuid: 12d06bb6-d797-3cf3-b368-a903b8702f2c
@@ -364,101 +267,120 @@ proxies:
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /abuciwyg
+      path: /eduifbiefg
       headers:
-        host: dearma.76898102.xyz
-  - &id030
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_3
-    type: trojan
-    server: whyd.jcnode.top
-    port: 40001
-    udp: true
-    password: eb04ced6-ef93-4941-8c7c-d18003ebeea1
-    sni: hk02.ckcloud.info
-    skip-cert-verify: true
-    network: tcp
-  - &id031
+        host: menmaz.76898102.xyz
+  - &id024
     name: 🇨🇳_CN_中国->🇭🇰_HK_香港_4
     type: trojan
-    server: gzyd.jcnode.top
-    port: 40002
+    server: gzdx.jcnode.top
+    port: 20001
     udp: true
-    password: eb04ced6-ef93-4941-8c7c-d18003ebeea1
-    sni: hk03.ckcloud.info
+    password: eee19429-f15e-40b8-9d2e-b15c09c9722c
+    sni: hk04.ckcloud.info
     skip-cert-verify: true
     network: tcp
-  - &id032
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
-    type: trojan
-    server: gzyd.jcnode.top
-    port: 48004
-    udp: true
-    password: eb04ced6-ef93-4941-8c7c-d18003ebeea1
-    sni: us05.ckcloud.info
-    skip-cert-verify: true
-    network: tcp
-  - &id033
-    name: 🇳🇱_NL_荷兰->🇩🇪_DE_德国
+  - &id025
+    name: 🇳🇱_NL_荷兰->🇸🇬_SG_新加坡
     type: vmess
-    server: ovhsdza.76898102.xyz
-    port: 2052
+    server: hkgkgb.76898102.xyz
+    port: 2082
     cipher: auto
-    uuid: 78fd41e5-346a-3bf4-b942-be0fad711979
+    uuid: aed95e45-53e1-45a4-a22c-f606522c4777
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /funsdfrh
+      path: /
       headers:
-        host: ovhsdz.76898102.xyz
-  - &id034
-    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
+        host: ccaws.cashdawiodxkawjaiocjdawdawdadwrawgfsegsededwadawfgrdrcvsssl.top
+  - &id026
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: vmess
+    server: gzdx.jcnode.top
+    port: 28000
+    cipher: auto
+    uuid: eee19429-f15e-40b8-9d2e-b15c09c9722c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+  - &id027
+    name: 🇺🇸_US_美国->🇫🇮_FI_芬兰
+    type: vmess
+    server: 104.31.16.45
+    port: 80
+    cipher: auto
+    uuid: 2fcc2939-7dcf-4741-aa03-825bc40e23fd
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /CZfczvtieCZXdOlgWhgDLX
+      headers:
+        host: de3.irteh.fun
+  - &id028
+    name: 🇨🇳_CN_中国->🇰🇷_KR_韩国
+    type: trojan
+    server: gzdx.jcnode.top
+    port: 22000
+    udp: true
+    password: eee19429-f15e-40b8-9d2e-b15c09c9722c
+    sni: sk01.ckcloud.info
+    skip-cert-verify: true
+    network: tcp
+  - &id029
+    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_4
+    type: trojan
+    server: gzdx.jcnode.top
+    port: 21000
+    udp: true
+    password: eee19429-f15e-40b8-9d2e-b15c09c9722c
+    sni: jp01.ckcloud.info
+    skip-cert-verify: true
+    network: tcp
+  - &id030
+    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾_1
     type: ss
-    server: gzcm.xn--8sq835h.net
-    port: 15352
-    password: dedaf22b-2901-4490-a316-07ee18113b59
+    server: proxy.node7.kk-proxy.pro
+    port: 39850
+    password: 4b34aa48-8602-46c3-8aea-36d6bd7ba3d7
     cipher: chacha20-ietf-poly1305
-  - &id035
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_5
-    type: trojan
-    server: gzyd.jcnode.top
-    port: 40000
-    udp: true
-    password: eb04ced6-ef93-4941-8c7c-d18003ebeea1
-    sni: hk05.ckcloud.info
+  - &id031
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: vmess
+    server: a-cm1.jsmmm.cyou
+    port: 39611
+    cipher: auto
+    uuid: 2ca11501-7729-3f82-884a-1ceaf2a49a3f
+    alterId: 0
+    tls: false
     skip-cert-verify: true
     network: tcp
-  - &id036
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_2
-    type: trojan
-    server: gzyd.jcnode.top
-    port: 21001
-    udp: true
-    password: fbe67563-e3a4-4b8c-8c1e-45a23c4b19d9
-    sni: jp02.ckcloud.info
+  - &id032
+    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾_2
+    type: ss
+    server: proxy.node5.kk-proxy.pro
+    port: 39851
+    password: 3aa9eed4-2439-40dc-9895-c2e6b0999f99
+    cipher: chacha20-ietf-poly1305
+  - &id033
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    type: vmess
+    server: ns1.v2-vip.fun
+    port: 80
+    cipher: auto
+    uuid: 8abe9496-5e24-4e49-b566-dcf86116017d
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id037
-    name: 🇨🇳_CN_中国->🇱🇺_LU_卢森堡
-    type: trojan
-    server: gzyd02.jcnode.top
-    port: 40004
-    udp: true
-    password: eb04ced6-ef93-4941-8c7c-d18003ebeea1
-    sni: hk05.ckcloud.info
-    skip-cert-verify: true
-    network: tcp
-  - &id038
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_6
-    type: trojan
-    server: gzyd.jcnode.top
-    port: 40001
-    udp: true
-    password: eb04ced6-ef93-4941-8c7c-d18003ebeea1
-    sni: hk02.ckcloud.info
-    skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /i99LgvSaslbsPLLQQ7j6Z
+      headers:
+        host: de5.irteh.fun
 proxy-groups:
   - name: PROXY
     type: select
@@ -518,11 +440,6 @@ proxy-groups:
       - *id031
       - *id032
       - *id033
-      - *id034
-      - *id035
-      - *id036
-      - *id037
-      - *id038
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -561,11 +478,6 @@ proxy-groups:
       - *id031
       - *id032
       - *id033
-      - *id034
-      - *id035
-      - *id036
-      - *id037
-      - *id038
   - name: SELECT
     type: select
     proxies:
@@ -602,11 +514,6 @@ proxy-groups:
       - *id031
       - *id032
       - *id033
-      - *id034
-      - *id035
-      - *id036
-      - *id037
-      - *id038
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
